FUNCITONAL IMAGES LOADING

--- a/animal-facts.html
+++ b/animal-facts.html
@@ -88,68 +88,32 @@
                   <button type="button" id="dogBtn1" class="btn btn-warning buttons">
                     <!-- span to display the fontawesome icon within the button -->
                     <span><i class="fa-solid fa-arrows-rotate"></i></span>
-                    Refresh Fact
+                    Refresh Image
                 </button>
             </div>
 
             <div class="col-sm-12 col-md-6 mb-3">
                 <div class="card">
                     <div class="card-header">
-                      Fun Cat Fact!
-                    </div>
-                    <div class="card-body">
-                      <blockquote id="catQuote1" class="blockquote mb-0">
-                        <p>A well-known quote, contained in a blockquote element.</p>
-                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-                      </blockquote>
-                    </div>
-                  </div>
-                  <button type="button" id="catBtn1" class="btn btn-info buttons">
-                    <!-- span to display the fontawesome icon within the button -->
-                    <span><i class="fa-solid fa-arrows-rotate"></i></span>
-                    Refresh Fact
-                </button>
-            </div>
-        </div>
-        
-        <div class="row">
-            <div class="col-sm-12 col-md-6 mt-3">
-                <div class="card">
-                    <div class="card-header">
-                      Fun Dog Fact!
+                      Fun Dog Fact 2!
                     </div>
                     <div class="card-body">
                       <blockquote id="dogQuote2" class="blockquote mb-0">
-                        <p>A well-known quote, contained in a blockquote element.</p>
-                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                        <div id="dogImg2"></div>
+                        <!-- source: https://www.thedrakecenter.com/services/dogs/blog/23-amazing-facts-about-dogs-you-probably-didnt-know -->
+                        <p>Dogs can be trained to to detect cancer and other diseases in humans. Dogs may even be able to sniff out cancer cells simply through smelling someone’s breath.</p>
+                        <footer class="blockquote-footer"><cite title="Source Title">The Drake Center, California</cite></footer>
                       </blockquote>
                     </div>
                   </div>
-                  <button type="button" id="dogBtn2" class="btn btn-warning buttons">
+                  <button type="button" id="dogBtn2" class="btn btn-info buttons">
                     <!-- span to display the fontawesome icon within the button -->
                     <span><i class="fa-solid fa-arrows-rotate"></i></span>
-                    Refresh Fact
+                    Refresh Image
                 </button>
             </div>
+        </div>
 
-            <div class="col-sm-12 col-md-6 mt-3">
-                <div class="card">
-                    <div class="card-header">
-                      Fun Cat Fact!
-                    </div>
-                    <div class="card-body">
-                      <blockquote id="catQuote2" class="blockquote mb-0">
-                        <p>A well-known quote, contained in a blockquote element.</p>
-                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-                      </blockquote>
-                    </div>
-                  </div>
-                  <button type="button" id="catBtn2" class="btn btn-info buttons">
-                    <!-- span to display the fontawesome icon within the button -->
-                    <span><i class="fa-solid fa-arrows-rotate"></i></span>
-                    Refresh Fact
-                </button>
-            </div>
         </div>
     </div>
 
