--- a/animal-facts.html
+++ b/animal-facts.html
@@ -72,13 +72,13 @@
     <div id="animalFactsContainer" class="container mt-3">
         <div class="row">
             <div class="col-sm-12 col-md-6 mb-3">
-                <div class="card">
+                <div class="card mb-2">
                     <div class="card-header">
                       Fun Dog Fact!
                     </div>
                     <div class="card-body">
                       <blockquote class="blockquote mb-0">
-                        <div id="dogImg1"></div>
+                        <div id="dogImg1" class="mb-3"></div>
                         <p id="dogQuote1">A dog’s nose print is unique, much like a person’s fingerprint.</p>
                         <!-- source: https://www.akc.org/expert-advice/lifestyle/dog-facts/ -->
                         <footer class="blockquote-footer"><cite title="Source Title">American Kennel Club </cite></footer>
@@ -93,13 +93,13 @@
             </div>
 
             <div class="col-sm-12 col-md-6 mb-3">
-                <div class="card">
+                <div class="card mb-2">
                     <div class="card-header">
                       Fun Dog Fact 2!
                     </div>
                     <div class="card-body">
                       <blockquote id="dogQuote2" class="blockquote mb-0">
-                        <div id="dogImg2"></div>
+                        <div id="dogImg2" class="mb-3"></div>
                         <!-- source: https://www.thedrakecenter.com/services/dogs/blog/23-amazing-facts-about-dogs-you-probably-didnt-know -->
                         <p>Dogs can be trained to to detect cancer and other diseases in humans. Dogs may even be able to sniff out cancer cells simply through smelling someone’s breath.</p>
                         <footer class="blockquote-footer"><cite title="Source Title">The Drake Center, California</cite></footer>
