FORM CONTROL FOR MAP UPDATES

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
                 Clear Map Content
             </button>
             
+            <!-- use form-control-plaintext to make the field readonly but display as normal -->
+            <input type="text" class="form-control-plaintext" id="mapUpdatesForm" placeholder="Map Updates will appear here!" readonly>
 
         </div>
         <div id="singaporeMap">
