--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <!-- Bootstrap 'select' element to select categories -->
                     <select id="categoryForm" type="text" class="form-control mb-3"
                         aria-label="Category selection form">
-                        <option value="pet-cafe" selected>Pet Cafes</option>
+                        <option value="pet-cafe" selected>Pet Cafés</option>
                         <option value="pet-grooming">Pet Grooming Services</option>
                         <option value="pet-supplies">Pet Supplies Stores</option>
                         <option value="dog-parks">Dog Parks</option>
