fixed minor error of navbar toggler targeting invalid id

--- a/animal-facts.html
+++ b/animal-facts.html
@@ -40,7 +40,7 @@
             <a id="dogFactsHeader" class="navbar-brand hoverable fluffFinderHeader" href="#">Fluff Finder</a>
             <!-- didn't work before the button toggler, try to add it now, REMEMBER HASHTAGS FOR ID -->
             <!-- aria tags are for accessibility purposes. -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#dogFactsNavbar"
                 aria-controls="navbarDropdown" aria-expanded="false" aria-label="Toggle collapsible navigation menu">
                 <span class="navbar-toggler-icon"></span>
 
